--- a/ios/App/Info.plist
+++ b/ios/App/Info.plist
@@ -54,6 +54,11 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>DelaGothicOne-Regular.ttf</string>
+		<string>DancingScript-Bold.ttf</string>
+		<string>DancingScript-Medium.ttf</string>
+		<string>DancingScript-Regular.ttf</string>
+		<string>DancingScript-SemiBold.ttf</string>
+		<string>DancingScript-VariableFont_wght.ttf</string>
 	</array>
 </dict>
 </plist>
