--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -2,12 +2,36 @@
   "migIndex": 1,
   "data": [
     {
+      "path": "assets/fonts/DancingScript-Bold.ttf",
+      "sha1": "40e545d9cdad467a919c2a38c032bc4fdb69c01f"
+    },
+    {
+      "path": "assets/fonts/DancingScript-Medium.ttf",
+      "sha1": "575d42d95b4b562cbd91341e61ab754386ffeadd"
+    },
+    {
+      "path": "assets/fonts/DancingScript-Regular.ttf",
+      "sha1": "77b7bf804974618d28d7b73c79ea5d34c82cb704"
+    },
+    {
+      "path": "assets/fonts/DancingScript-SemiBold.ttf",
+      "sha1": "3d2e9198ccd497e0ccaf29b53cd2e4e9063dc78a"
+    },
+    {
+      "path": "assets/fonts/DancingScript-VariableFont_wght.ttf",
+      "sha1": "80f13e7575ec59a51b7fdc42bb0b9d7a34439123"
+    },
+    {
       "path": "assets/fonts/DelaGothicOne-Regular.ttf",
       "sha1": "aa4fe2ff09693803f5665c6596480f2f911f8540"
     },
     {
       "path": "assets/fonts/OFL.txt",
-      "sha1": "43513d1f6a1329962106efc212457e1d6ef9e980"
+      "sha1": "55cd46bc813c288ff885f6fe65104ff4e7ebeb39"
+    },
+    {
+      "path": "assets/fonts/README.txt",
+      "sha1": "c26303553d2841dad8023a6eeabb64b8ba2deda6"
     }
   ]
 }
